# cli

./: Cargo.toml  LICENSE  README.md  deny.toml  install.sh
.cargo/: config.toml
.github/workflows/: audit.yml  install-test.yml  pr-full-build.yml  quality-gates.yml  release-assets.yml
src/: error.rs  main.rs  resolver.rs
src/api/: client.rs  errors.rs  mod.rs  types.rs
src/commands/: add.rs  add_to_path.rs  cache.rs  check_update.rs  config.rs  deprecate.rs  dist_tag.rs  info.rs  init.rs  install.rs  key.rs  link.rs  login.rs  logout.rs  mod.rs  pack.rs  publish.rs  remove.rs  search.rs  token.rs  update.rs  verify.rs  whoami.rs
src/config/: cache.rs  credentials.rs  keys.rs  links.rs  lockfile.rs  manifest.rs  metadata_cache.rs  mod.rs  settings.rs
src/setup/: claude.rs  codex.rs  cursor.rs  kiro.rs  mod.rs  windsurf.rs
src/util/: display.rs  git.rs  integrity.rs  mod.rs  offline.rs  package.rs  secret_perms.rs  tarball.rs  verify.rs
tests/: cli.rs
