[package]
name = "qpm"
version = "0.1.0"
edition = "2021"
description = "Package manager for AI tooling — skills, agents, MCP servers, prompts, configs"
license = "MIT"

[dependencies]
clap = { version = "4", features = ["derive"] }
clap_complete = "4"
reqwest = { version = "0.12", features = ["rustls-tls", "multipart", "json"], default-features = false }
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tar = "0.4"
flate2 = "1"
sha2 = "0.10"
base64 = "0.22"
ed25519-dalek = { version = "2", features = ["rand_core"] }
rand = "0.8"
dialoguer = { version = "0.11", features = ["password"] }
indicatif = "0.17"
console = "0.15"
thiserror = "2"
miette = { version = "7", features = ["fancy"] }
dirs = "6"
semver = "1"
chrono = { version = "0.4", features = ["serde"] }
glob-match = "0.2"
urlencoding = "2"
regex-lite = "0.1"

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
tempfile = "3"
