[package]
name = "apkg"
version = "0.1.0"
edition = "2021"
description = "Package manager for AI tooling — skills, agents, MCP servers, prompts, configs"
license = "MIT"
repository = "https://github.com/apkg-ai/cli"
homepage = "https://github.com/apkg-ai/cli"
documentation = "https://github.com/apkg-ai/cli"
readme = "README.md"
keywords = ["package-manager", "ai", "cli", "mcp", "skills"]
categories = ["command-line-utilities", "development-tools"]

[dependencies]
clap = { version = "4", features = ["derive"] }
clap_complete = "4"
reqwest = { version = "0.13", features = ["rustls", "multipart", "json"], default-features = false }
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tar = "0.4"
zstd = "0.13"
sha2 = "0.11"
base64 = "0.22"
ed25519-dalek = { version = "2", features = ["rand_core"] }
rand = "0.8"
dialoguer = { version = "0.12", features = ["password"] }
indicatif = "0.18"
console = "0.16"
thiserror = "2"
miette = { version = "7", features = ["fancy"] }
dirs = "6"
semver = "1"
chrono = { version = "0.4", features = ["serde"] }
glob-match = "0.2"
urlencoding = "2"
regex-lite = "0.1"

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
tempfile = "3"
wiremock = "0.6"
